--- a/rbutil/rbutilqt/aboutbox.ui
+++ b/rbutil/rbutilqt/aboutbox.ui
@@ -81,7 +81,7 @@ Released under the GNU General Public License v2.</string>
       <bool>true</bool>
      </property>
      <property name="textInteractionFlags" >
-      <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::NoTextInteraction</set>
+      <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse</set>
      </property>
     </widget>
    </item>
@@ -98,7 +98,7 @@ Released under the GNU General Public License v2.</string>
        <item row="0" column="0" >
         <widget class="QTextBrowser" name="browserCredits" >
          <property name="focusPolicy" >
-          <enum>Qt::NoFocus</enum>
+          <enum>Qt::TabFocus</enum>
          </property>
          <property name="acceptDrops" >
           <bool>false</bool>
@@ -109,8 +109,11 @@ Released under the GNU General Public License v2.</string>
          <property name="autoFormatting" >
           <set>QTextEdit::AutoNone</set>
          </property>
+         <property name="tabChangesFocus" >
+          <bool>true</bool>
+         </property>
          <property name="textInteractionFlags" >
-          <set>Qt::NoTextInteraction</set>
+          <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::TextBrowserInteraction|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
          </property>
          <property name="openExternalLinks" >
           <bool>true</bool>
@@ -126,11 +129,20 @@ Released under the GNU General Public License v2.</string>
       <layout class="QGridLayout" >
        <item row="0" column="0" >
         <widget class="QTextBrowser" name="browserLicense" >
+         <property name="focusPolicy" >
+          <enum>Qt::TabFocus</enum>
+         </property>
          <property name="horizontalScrollBarPolicy" >
           <enum>Qt::ScrollBarAlwaysOff</enum>
          </property>
+         <property name="tabChangesFocus" >
+          <bool>true</bool>
+         </property>
          <property name="lineWrapMode" >
           <enum>QTextEdit::WidgetWidth</enum>
+         </property>
+         <property name="textInteractionFlags" >
+          <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::TextBrowserInteraction|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
          </property>
         </widget>
        </item>
