--- a/rbutil/rbutilqt/installtalkfrm.ui
+++ b/rbutil/rbutilqt/installtalkfrm.ui
@@ -37,7 +37,11 @@
     </widget>
    </item>
    <item row="1" column="1" colspan="2" >
-    <widget class="QLineEdit" name="lineTalkFolder" />
+    <widget class="QLineEdit" name="lineTalkFolder" >
+     <property name="accessibleName" >
+      <string>Talkfile Folder</string>
+     </property>
+    </widget>
    </item>
    <item row="1" column="3" >
     <widget class="QPushButton" name="buttonBrowse" >
