rbutil: add a Button to test a TTS Engine. Remove a old .ui file.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21525 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/rbutilqt/configurefrm.ui
+++ b/rbutil/rbutilqt/configurefrm.ui
@@ -380,7 +380,7 @@
             </property>
            </widget>
           </item>
-          <item row="0" column="1" colspan="3" >
+          <item row="0" column="1" colspan="2" >
            <widget class="QComboBox" name="comboTts" />
           </item>
           <item row="1" column="0" >
@@ -415,6 +415,13 @@
             <property name="icon" >
              <iconset resource="rbutilqt.qrc" >
               <normaloff>:/icons/edit-find.png</normaloff>:/icons/edit-find.png</iconset>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="3">
+           <widget class="QPushButton" name="testTTS">
+            <property name="text">
+             <string>Test TTS</string>
             </property>
            </widget>
           </item>
