FS#10439: Português Brasileiro Translation for Rockbox Utility by Adilson Xavier.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21902 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/rbutilqt/rbutilqt-lang.qrc
+++ b/rbutil/rbutilqt/rbutilqt-lang.qrc
@@ -11,5 +11,6 @@
         <file>lang/rbutil_he.qm</file>
         <file>lang/rbutil_ja.qm</file>
         <file>lang/rbutil_pt.qm</file>
+        <file>lang/rbutil_pt_BR.qm</file>
         </qresource>
 </RCC>
