Add Save icon and add a note to the about dialog about the origin of the icons. Should have been there much earlier ...
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22353 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/rbutilqt/rbutilqt.qrc
+++ b/rbutil/rbutilqt/rbutilqt.qrc
@@ -12,6 +12,7 @@
         <file>icons/dialog-error.png</file>
         <file>icons/dialog-information.png</file>
         <file>icons/dialog-warning.png</file>
+        <file>icons/document-save.png</file>
         <file>icons/doom_btn.png</file>
         <file>icons/edit-find.png</file>
         <file>icons/font_btn.png</file>
