--- a/rbutil/rbutilqt/aboutbox.ui
+++ b/rbutil/rbutilqt/aboutbox.ui
@@ -5,17 +5,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>443</width>
-    <height>482</height>
+    <width>500</width>
+    <height>500</height>
    </rect>
   </property>
   <property name="windowTitle" >
    <string>About Rockbox Utility</string>
   </property>
   <property name="windowIcon" >
-   <iconset resource="rbutilqt.qrc" >:/icons/rockbox-1.png</iconset>
+   <iconset resource="rbutilqt.qrc" >
+    <normaloff>:/icons/rockbox-1.png</normaloff>:/icons/rockbox-1.png</iconset>
   </property>
-  <layout class="QGridLayout" >
+  <layout class="QGridLayout" name="gridLayout" >
    <item row="0" column="0" colspan="3" >
     <layout class="QHBoxLayout" >
      <item>
@@ -40,7 +41,7 @@
        <property name="orientation" >
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0" >
         <size>
          <width>40</width>
          <height>20</height>
@@ -53,10 +54,10 @@
    <item row="1" column="0" colspan="3" >
     <widget class="QLabel" name="labelText" >
      <property name="text" >
-      <string>Installer and housekeeping utility for the Rockbox open source digital audio player firmware.
-
-© 2005 - 2009 The Rockbox Team.
-Released under the GNU General Public License v2.</string>
+      <string>Installer and housekeeping utility for the Rockbox open source digital audio player firmware.&lt;br/>© 2005 - 2009 The Rockbox Team.&lt;br/>Released under the GNU General Public License v2.&lt;br/>Uses icons by the &lt;a href="http://tango.freedesktop.org/">Tango Project&lt;/a>.&lt;br/>&lt;center>&lt;a href="http://www.rockbox.org">http://www.rockbox.org&lt;/a>&lt;/center></string>
+     </property>
+     <property name="textFormat" >
+      <enum>Qt::RichText</enum>
      </property>
      <property name="wordWrap" >
       <bool>true</bool>
@@ -67,25 +68,6 @@ Released under the GNU General Public License v2.</string>
     </widget>
    </item>
    <item row="2" column="0" colspan="3" >
-    <widget class="QLabel" name="labelHomepage" >
-     <property name="text" >
-      <string>http://www.rockbox.org</string>
-     </property>
-     <property name="textFormat" >
-      <enum>Qt::AutoText</enum>
-     </property>
-     <property name="alignment" >
-      <set>Qt::AlignCenter</set>
-     </property>
-     <property name="openExternalLinks" >
-      <bool>true</bool>
-     </property>
-     <property name="textInteractionFlags" >
-      <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse</set>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="0" colspan="3" >
     <widget class="QTabWidget" name="tabWidget" >
      <property name="currentIndex" >
       <number>0</number>
@@ -150,12 +132,12 @@ Released under the GNU General Public License v2.</string>
      </widget>
     </widget>
    </item>
-   <item row="4" column="0" >
+   <item row="3" column="0" >
     <spacer>
      <property name="orientation" >
       <enum>Qt::Horizontal</enum>
      </property>
-     <property name="sizeHint" >
+     <property name="sizeHint" stdset="0" >
       <size>
        <width>40</width>
        <height>20</height>
@@ -163,19 +145,19 @@ Released under the GNU General Public License v2.</string>
      </property>
     </spacer>
    </item>
-   <item row="4" column="1" >
+   <item row="3" column="1" >
     <widget class="QPushButton" name="okButton" >
      <property name="text" >
       <string>&amp;Ok</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="2" >
+   <item row="3" column="2" >
     <spacer>
      <property name="orientation" >
       <enum>Qt::Horizontal</enum>
      </property>
-     <property name="sizeHint" >
+     <property name="sizeHint" stdset="0" >
       <size>
        <width>40</width>
        <height>20</height>
