--- a/rbutil/rbutilqt/progressloggerfrm.ui
+++ b/rbutil/rbutilqt/progressloggerfrm.ui
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<ui version="4.0">
+<ui version="4.0" >
  <class>ProgressLoggerFrm</class>
- <widget class="QDialog" name="ProgressLoggerFrm">
-  <property name="geometry">
+ <widget class="QDialog" name="ProgressLoggerFrm" >
+  <property name="geometry" >
    <rect>
     <x>0</x>
     <y>0</y>
@@ -10,62 +9,66 @@
     <height>302</height>
    </rect>
   </property>
-  <property name="windowTitle">
+  <property name="windowTitle" >
    <string>Progress</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
-    <widget class="QLabel" name="labelHeader">
-     <property name="text">
+  <layout class="QGridLayout" name="gridLayout" >
+   <item row="0" column="0" >
+    <widget class="QLabel" name="labelHeader" >
+     <property name="text" >
       <string>Progress</string>
      </property>
-     <property name="wordWrap">
+     <property name="wordWrap" >
       <bool>true</bool>
      </property>
     </widget>
    </item>
-   <item row="1" column="0" colspan="3">
-    <widget class="QListWidget" name="listProgress">
-     <property name="focusPolicy">
+   <item row="1" column="0" colspan="3" >
+    <widget class="QListWidget" name="listProgress" >
+     <property name="focusPolicy" >
       <enum>Qt::TabFocus</enum>
      </property>
-     <property name="accessibleName">
+     <property name="accessibleName" >
       <string>progresswindow</string>
      </property>
-     <property name="tabKeyNavigation">
+     <property name="tabKeyNavigation" >
       <bool>true</bool>
      </property>
-     <property name="selectionBehavior">
+     <property name="selectionBehavior" >
       <enum>QAbstractItemView::SelectRows</enum>
      </property>
-     <property name="wordWrap">
+     <property name="wordWrap" >
       <bool>true</bool>
      </property>
     </widget>
    </item>
-   <item row="2" column="0" colspan="3">
-    <widget class="QProgressBar" name="progressBar">
-     <property name="value">
+   <item row="2" column="0" colspan="3" >
+    <widget class="QProgressBar" name="progressBar" >
+     <property name="value" >
       <number>0</number>
      </property>
     </widget>
    </item>
-   <item row="3" column="0">
-    <widget class="QPushButton" name="saveLog">
-     <property name="enabled">
+   <item row="3" column="0" >
+    <widget class="QPushButton" name="saveLog" >
+     <property name="enabled" >
       <bool>true</bool>
      </property>
-     <property name="text">
+     <property name="text" >
       <string>Save Log</string>
+     </property>
+     <property name="icon" >
+      <iconset resource="rbutilqt.qrc" >
+       <normaloff>:/icons/document-save.png</normaloff>:/icons/document-save.png</iconset>
      </property>
     </widget>
    </item>
-   <item row="3" column="1">
+   <item row="3" column="1" >
     <spacer>
-     <property name="orientation">
+     <property name="orientation" >
       <enum>Qt::Horizontal</enum>
      </property>
-     <property name="sizeHint" stdset="0">
+     <property name="sizeHint" stdset="0" >
       <size>
        <width>40</width>
        <height>20</height>
@@ -73,13 +76,13 @@
      </property>
     </spacer>
    </item>
-   <item row="3" column="2">
-    <widget class="QPushButton" name="buttonAbort">
-     <property name="text">
+   <item row="3" column="2" >
+    <widget class="QPushButton" name="buttonAbort" >
+     <property name="text" >
       <string>&amp;Abort</string>
      </property>
-     <property name="icon">
-      <iconset resource="rbutilqt.qrc">
+     <property name="icon" >
+      <iconset resource="rbutilqt.qrc" >
        <normaloff>:/icons/process-stop.png</normaloff>:/icons/process-stop.png</iconset>
      </property>
     </widget>
@@ -87,7 +90,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="rbutilqt.qrc"/>
+  <include location="rbutilqt.qrc" />
  </resources>
  <connections/>
 </ui>
