Add Czech translation to the resources too.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@23018 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/rbutilqt/rbutilqt-lang.qrc
+++ b/rbutil/rbutilqt/rbutilqt-lang.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/" >
+        <file>lang/rbutil_cs.qm</file>
         <file>lang/rbutil_de.qm</file>
         <file>lang/rbutil_fi.qm</file>
         <file>lang/rbutil_tr.qm</file>
