--- a/rbutil/rbutilqt/installtalkfrm.ui
+++ b/rbutil/rbutilqt/installtalkfrm.ui
@@ -216,9 +216,9 @@
        </widget>
       </item>
       <item row="7" column="0">
-       <widget class="QCheckBox" name="OverwriteTalk">
+       <widget class="QCheckBox" name="GenerateOnlyNew">
         <property name="text">
-         <string>Overwrite Talkfiles</string>
+         <string>Create only new Talkfiles</string>
         </property>
         <property name="checked">
          <bool>true</bool>
